--- a/web/style.css
+++ b/web/style.css
@@ -1,3 +1,6 @@
+/*
+    CSS pro Hladvní podstránku by: Maxwell Georg Olsbro
+*/
 :root {
     --main-background: #FFFFFF;
     --secondary-color: #D9D9D9;
@@ -157,3 +160,152 @@ footer {
 #brand {
     color: rgba(0, 0, 0, 0.5);
 }
+
+/*
+    CSS pro Login podstránku by: Vít Valenta
+*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+    }
+    
+    .body-login{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-image: url(Dovča.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    }
+    
+    .wrapper {
+        width: 40vw;
+        height: 100vh;
+        background: white;
+        text-align: center;
+        padding-top: 15vh;
+    }
+    
+    .wrapper img{
+        width: 180px;
+        border-radius: 10px;
+        
+    }
+    
+    
+    
+    label{
+        display:flex;
+        align-items: flex-end;
+        margin-bottom: 5px;
+        font-size: small;
+    }
+    
+    .wrapper .input-box{
+        width: 100%;
+        height: 60px;
+        display:flex;
+        justify-content: space-between;
+        background-color: #F1F3F6;
+        border-radius: 5px;
+    }
+    
+    .wrapper .log-text{
+        padding-top: 10%;
+        font-size:90%;
+    }
+    
+    .input-box input{
+        width: auto;
+        flex-shrink: 1;
+        height: 100%;
+        background: transparent;
+        border: none;
+        outline: none;
+    }
+    
+    .icon{
+        height: 60px;
+        width: 60px;
+        background-color: #202053;
+        border-radius: 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .forgot{
+        margin-top: 10px;
+        text-align: right;
+        font-size: small;
+    }
+    .grid-box{
+        text-align: left;
+        width: 80%;
+        margin: 0  auto;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        
+    }
+    
+    .btn{
+        text-align: left;
+        width: 80%;
+        margin: 0  auto;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 50px 80px 50px;
+        margin-top: 50px;
+    }
+    
+    .login-btn{
+        border: none;
+        background-color: #202053;
+        border-radius: 5px;
+        color: white;
+    }
+    
+    .signup-btn{
+        border: #202053 solid 1px;
+        background-color: transparent; 
+        border-radius: 5px;
+        color: #202053;
+    }
+    
+    
+    @media screen and (max-width:1024px)  {
+        .wrapper {
+            width: 100vw;
+            height: 100vh;
+            background: white;
+            text-align: center;
+            padding-top: 15vh;
+        }
+        
+    }
+    
+    @media screen and (max-width:400px) {
+        .icon{
+            display:none;
+        }
+    }
+    
+    /*
+        CSS pro Confirmation podstránku by: Robin Kremlík
+    */
+    
+    
+    .body-Confirmation{
+    
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        }
